fixed container overflow on browse page bug

--- a/frontend/src/styles/phrasepair.css
+++ b/frontend/src/styles/phrasepair.css
@@ -10,12 +10,13 @@
 
 .l-view {
   width:500px;
-  height:80px;
+  height:120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  overflow-y: auto;
 }
 .l-edit {
   width:500px;
